vendor and customer dashboard edits

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -27,6 +27,12 @@
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"> 
+            {% include 'includes/alerts.html' %}
+        </div>
+    </div>
+
     <div class="copyright-sec">
         <div class="container">
             <div class="row">
@@ -41,6 +47,14 @@
             </div>
         </div>
     </div> <!-- /.cs-copyright -->
+
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"> 
+            {% include 'includes/alerts.html' %}
+        </div>
+    </div>
+
+
 </footer>
 <!-- Footer End -->
 </div>
