--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
 	<script src="{% static 'js/modernizr.js' %}"></script>
 	<script src="{% static 'js/bootstrap.js' %}"></script>
 
-	<link href="{% static 'css/custom.css' %}" rel="stylesheet">
+	<link rel="stylesheet" href="{% static 'css/custom.css' %}">
 
 	<style>
 		body, .main-section p, .mce-content-body p{
