--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
 	<link rel="stylesheet" href="{% static 'css/custom.css' %}">
 
 	{% if '/profile/' in request.path or '/' == request.path %}
-	<script src="https://maps.googleapis.com/maps/api/js?key={{GOOGLE_API_KEY}}&libraries=places&callback=initAutoComplete" async defer></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key={{GOOGLE_API_KEY}}&libraries=places&callback=initAutoComplete" defer></script>
 	{% endif %}
 	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 	<script src="{% static 'js/custom.js' %}"></script>
