--- a/templates/marketplace/listings.html
+++ b/templates/marketplace/listings.html
@@ -48,6 +48,11 @@
                                                 <small class="text-muted">{{ vendor.user_profile.address }}</small>
                                             </span>
                                             {% endif %}
+
+                                            {% if source_location %}
+                                            <br>
+                                            <span><small><b>{{ vendor.kms }}km</b> away from {{source_location}}</small></span>
+                                            {% endif %}
                                         </div>
                                         <div class="list-option">
 
