--- a/templates/marketplace/cart.html
+++ b/templates/marketplace/cart.html
@@ -79,13 +79,27 @@
                                                     <span id="subtotal">{{ subtotal }}</span>
                                                 </span>
                                             </li>
-                                            <li style="list-style-type: none;">
-                                                Tax
-                                                <span class="price float-right">
-                                                    <span class="currency">BGN</span>
-                                                    <span id="tax">{{ tax }}</span>
-                                                </span>
-                                            </li>
+                                            {% for key, value in tax_dict.items %}
+                                                {% for i, j in value.items %}
+                                                    {% if key == "Delivery" %}
+                                                        <li style="list-style-type: none;">
+                                                            {{key}}
+                                                            <span class="price float-right">
+                                                                <span class="currency">BGN</span>
+                                                                <span id="tax-{{ key }}">{{ j }}</span>
+                                                            </span>
+                                                        </li>
+                                                    {% else %}
+                                                        <li style="list-style-type: none;">
+                                                            {{key}} <small>({{ i }}%)</small>
+                                                            <span class="price float-right">
+                                                                <span class="currency">BGN</span>
+                                                                <span id="tax-{{ key }}">{{ j }}</span>
+                                                            </span>
+                                                        </li>
+                                                    {% endif %}
+                                                {% endfor %}
+                                            {% endfor %}
                                             <li style="list-style-type: none; font-weight: 600;">
                                                 TOTAL
                                                 <span class="price float-right">
