--- a/takeawaysite/static/css/custom.css
+++ b/takeawaysite/static/css/custom.css
@@ -35,3 +35,22 @@ table > tbody > tr > td{
 .btn-success.add_hour{
     padding: 10px 18px 10px 18px;
 }
+
+/* hide radio button */
+.payment-method [type=radio]{
+    position: absolute;
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+/* Image style */
+.payment-method [type=radio] + img{
+    cursor: pointer;
+    padding: 5px;
+}
+
+/* Checked style */
+.payment-method [type=radio]:checked + img{
+    outline: 2px solid #ff0000;
+}
