orders and paypal implementation

--- a/templates/marketplace/checkout.html
+++ b/templates/marketplace/checkout.html
@@ -141,16 +141,16 @@
 
                                             <!-- SELECT PAYMENT METHOD -->
                                             <h5>SELECT PAYMENT METHOD</h5>
-                                            <div class="payment-method">
+                                            <div class="payment-method" style="display: flex; justify-content: center;">
                                                 <label>
                                                     <input type="radio" name="payment_method" value="PayPal">
                                                     <img src="{% static 'images/PayPal.png' %}" alt="PayPal" width="100">
                                                 </label>
-                                                &emsp;
+                                                <!-- &emsp;
                                                 <label>
                                                     <input type="radio" name="payment_method" value="CashOnDelivery">
                                                     <img src="{% static 'images/cash-on-delivery-banner.png' %}" alt="CashOnDelivery" width="100">
-                                                </label>
+                                                </label> -->
                                             </div>
                                             <span class="text-danger" id="payment-method-error"></span>
                                             <!-- SELECT PAYMENT METHOD -->
