--- a/templates/orders/order_complete.html
+++ b/templates/orders/order_complete.html
@@ -59,7 +59,7 @@
                                 Subtotal
                                 <span class="price float-right">
                                     <span class="currency">BGN</span>
-                                    <span id="subtotal">{{ subtotal }}</span>
+                                    <span id="subtotal">{{ subtotal|floatformat:2 }}</span>
                                 </span>
                             </li>
                             {% for key, value in tax_data.items %}
