--- a/templates/customers/my_orders.html
+++ b/templates/customers/my_orders.html
@@ -25,7 +25,7 @@
                                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                     <div class="user-orders-list">
                                         <div class="responsive-table">
-                                            <table class="table table-hover">
+                                            <table class="table table-hover" id="myOrdersTable">
                                                 <thead>
                                                   <tr>
                                                     <th scope="col">Order #</th>
@@ -49,12 +49,6 @@
                                                     {% endfor %}
                                                 </tbody>
                                               </table>
-
-                                            <div class="row">
-                                                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">    
-                                                    {% include 'includes/alerts.html' %}
-                                                </div>
-                                            </div>
 
                                         </div>												
                                     </div>
