--- a/templates/accounts/emails/vendor_verification_email.html
+++ b/templates/accounts/emails/vendor_verification_email.html
@@ -32,7 +32,7 @@
     <tr>
       <td>
         <h2 style="text-align: center;">Activate Your Account</h2>
-        <p style="text-align: center;">Please verify your email address to activate your account.</p>
+        <p style="text-align: center;">Please verify your email address to activate your account and wait for approval email.</p>
         <div style="text-align: center;">
           <a href="http://{{domain}}{% url 'activate' uidb64=uid token=token %}" class="activate-btn" style="color: #fff;">Activate Now</a>
         </div>
