--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -17,9 +17,17 @@
                                         <input type="text" class="field-input" placeholder=" Enter Your Email Address...">
                                     </label>
                                 </div>
+                                <!-- <div class="field-holder btn-holder">
+                                    <a href="{% url 'registerUser' %}">
+                                        <input class="subscribe-btn bgcolor" type="submit" value="Sign Up">
+                                    </a>
+                                </div> -->
                                 <div class="field-holder btn-holder">
-                                    <input class="subscribe-btn bgcolor" type="submit" value="Sign Up">
+                                    <a href="{% url 'registerUser' %}" class="subscribe-btn bgcolor">
+                                        Sign Up
+                                    </a>
                                 </div>
+                                
                             </form>
                         </div>
                     </div>
