added docstrings, descriprions and changes into the templates

--- a/templates/accounts/emails/reset_password_email.html
+++ b/templates/accounts/emails/reset_password_email.html
@@ -1,8 +1,8 @@
 {% autoescape off %}
 
-Hi {{user.first_name}},
+Здравейте, {{user.first_name}},
 
-Please click on below link to reset your password.
+Моля, кликнете върху съответния линк за възстановяване на забравена парола.
 http://{{domain}}{% url 'reset_password_validate' uidb64=uid token=token %}
 
 {% endautoescape %}
