--- a/templates/accounts/registerVendor.html
+++ b/templates/accounts/registerVendor.html
@@ -10,8 +10,8 @@
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
                     <div class="user-dashboard loader-holder">
                         <div class="user-holder">
-                    <h4 class="text-center" style="margin-bottom: 0;">PARTNER WITH FOODONLINE</h4>
-                    <p class="text-center">Register your restaurant with foodOnline marketplace and get more customers.</p>
+                    <h4 class="text-center" style="margin-bottom: 0;">ПАРТНЬОР С FOODONLINE</h4>
+                    <p class="text-center">Регистрирайте своя ресторант в нашата платформа и спечелете още доволни клиенти.</p>
                     <hr>
                     <div id="restaurant-sets-holder">
                         <form action="{% url 'registerVendor' %}" class="form-fields-set foodbakery-dev-restaurant-form" method="post" enctype="multipart/form-data">
@@ -25,35 +25,35 @@
                                                     <li>
                                                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                                                             <div class="field-holder">
-                                                                <label>First name</label>{{form.first_name}}
+                                                                <label>Име</label>{{form.first_name}}
                                                             </div>
                                                         </div>
                                                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                                                             <div class="field-holder">
-                                                                <label>Last name</label>{{form.last_name}}
+                                                                <label>Фамилия</label>{{form.last_name}}
                                                             </div>
                                                         </div>
                                                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                                                             <div class="field-holder">
-                                                                <label>Restaurant name</label>{{v_form.vendor_name}}
-                                                            </div>
-                                                        </div>
-
-                                                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                                            <div class="field-holder">
-                                                                <label>Restaurant License</label>{{v_form.vendor_license}}
+                                                                <label>Име на ресторант</label>{{v_form.vendor_name}}
                                                             </div>
                                                         </div>
 
                                                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                                                             <div class="field-holder">
-                                                                <label>Email Address</label>{{form.email}}
+                                                                <label>Лиценз</label>{{v_form.vendor_license}}
                                                             </div>
                                                         </div>
 
                                                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                                                             <div class="field-holder">
-                                                                <label>Username</label>{{form.username}}
+                                                                <label>Имейл</label>{{form.email}}
+                                                            </div>
+                                                        </div>
+
+                                                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                                                            <div class="field-holder">
+                                                                <label>Потребителско име</label>{{form.username}}
                                                             </div>
                                                         </div>
                                                     </li>
@@ -61,13 +61,13 @@
                                                     <li>
                                                         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                                                             <div class="field-holder">
-                                                                <label>Password</label>
+                                                                <label>Парола</label>
                                                                 {{form.password}}
                                                             </div>
                                                         </div>
                                                         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                                                             <div class="field-holder">
-                                                                <label>Confirm Password</label>
+                                                                <label>Потвърди Парола</label>
                                                                 {{form.confirm_password}}
                                                             </div>
                                                         </div>
@@ -94,7 +94,7 @@
                                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                             <div class="field-holder">
                                                 <div class="payment-holder">
-                                                    <input type="submit" value="Submit" id="btn-next-restaurant-information" class="bgcolor">
+                                                    <input type="submit" value="Изпрати" id="btn-next-restaurant-information" class="bgcolor">
                                                 </div>
                                             </div>
                                         </div>
