--- a/templates/accounts/custDashboard.html
+++ b/templates/accounts/custDashboard.html
@@ -19,12 +19,12 @@
                 <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
                     <div class="user-dashboard loader-holder">
                         <div class="user-holder">
-                            <h5 class="text-uppercase">Overview</h5>
+                            <h5 class="text-uppercase">Преглед</h5>
                             <div class="row">
                                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                                     <div class="card">
                                         <div class="card-header">
-                                            Total Orders
+                                            Брой Поръчки
                                         </div>
                                         <div class="card-body text-center">
                                             <a href="#"><h5 class="card-title">{{ orders_count }}</h5></a>
@@ -34,10 +34,10 @@
                                 <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
                                     <div class="card">
                                         <div class="card-header">
-                                            Logged in as: <b>{{ user.email }}</b>
+                                            Вписан като: <b>{{ user.email }}</b>
                                         </div>
                                         <div class="card-body text-center">
-                                            <a href="{% url 'cprofile' %}"><h5 class="card-title"><i class="fa fa-edit"></i> Edit profile</h5></a>
+                                            <a href="{% url 'cprofile' %}"><h5 class="card-title"><i class="fa fa-edit"></i>Редактирай профила си</h5></a>
                                         </div>
                                     </div>
                                 </div>
@@ -45,20 +45,20 @@
                             </div>
                             <br>
                             
-                            <h5 class="text-uppercase">Recent Orders</h5>
+                            <h5 class="text-uppercase">Последно направени поръчки</h5>
                             <div class="row">
                                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                     <div class="user-orders-list">
                                         <div class="responsive-table">
-                                            <table class="table table-hover" id="myOrdersTable">
+                                            <table class="table table-hover">
                                                 <thead>
                                                   <tr>
-                                                    <th scope="col">Order #</th>
-                                                    <th scope="col">Name</th>
-                                                    <th scope="col">Total</th>
-                                                    <th scope="col">Status</th>
-                                                    <th scope="col">Date</th>
-                                                    <th scope="col">Action</th>
+                                                    <th scope="col">Поръчка #</th>
+                                                    <th scope="col">Име</th>
+                                                    <th scope="col">Тотал</th>
+                                                    <th scope="col">Статус</th>
+                                                    <th scope="col">Дата</th>
+                                                    <th scope="col">Действие</th>
                                                   </tr>
                                                 </thead>
                                                 <tbody>
@@ -69,7 +69,7 @@
                                                             <td>BGN {{ order.total }}</td>
                                                             <td>{{ order.status }}</td>
                                                             <td>{{ order.created_at }}</td>
-                                                            <td><a href="{% url 'order_detail' order.order_number %}" class="btn btn-danger">Details</a></td>
+                                                            <td><a href="{% url 'order_detail' order.order_number %}" class="btn btn-danger">Детайли</a></td>
                                                         </tr>
                                                     {% endfor %}
                                                 </tbody>
