--- a/templates/accounts/emails/account_verification_email.html
+++ b/templates/accounts/emails/account_verification_email.html
@@ -31,10 +31,10 @@
   <table bgcolor="#EAF0F6" width="100%" role="presentation" border="0" cellpadding="0" cellspacing="10px" style="padding: 30px 30px 60px 60px;">
     <tr>
       <td>
-        <h2 style="text-align: center;">Activate Your Account</h2>
-        <p style="text-align: center;">Please verify your email address to activate your account.</p>
+        <h2 style="text-align: center;">Активирай своя акаунт</h2>
+        <p style="text-align: center;">Моля, потвърдете своя имейл адрес, за да активирате акаунта си.</p>
         <div style="text-align: center;">
-          <a href="http://{{domain}}{% url 'activate' uidb64=uid token=token %}" class="activate-btn" style="color: #fff;">Activate Now</a>
+          <a href="http://{{domain}}{% url 'activate' uidb64=uid token=token %}" class="activate-btn" style="color: #fff;">Активирай сега</a>
         </div>
       </td> 
     </tr>
