--- a/templates/accounts/emails/admin_approval_email.html
+++ b/templates/accounts/emails/admin_approval_email.html
@@ -1,11 +1,11 @@
 {% autoescape off %}
 
-Hi {{user.first_name}},
+Здравей, {{user.first_name}},
 
 {% if is_approved %}
-Congratulations! Your restaurant has been approved by our admin team. --foodOnline
+Поздравления! Твоят ресторант беше одобрен от нашия администраторски екип. --foodOnline
 {% else %}
-We're sorry! You are not eligible for publishing your food menu on our marketplace. For more details please contact support@foodonline.com. --foodOnline
+Съжаляваме! Вие не отговаряте на условията за публикуване на меню в нашата платформа. За повече информация, свържете се с support@foodonline.com. --foodOnline
 {% endif %}
 
 
