--- a/templates/accounts/forgot_password.html
+++ b/templates/accounts/forgot_password.html
@@ -10,8 +10,8 @@
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
                     <div class="user-dashboard loader-holder" style="width: 450px; min-height: auto;">
                         <div class="user-holder">
-                    <h4 class="text-center" style="margin-bottom: 0;">Forgot your password?</h4>
-                    <p class="text-center">Please enter your email address and we will send you a link to reset your password.</p>
+                    <h4 class="text-center" style="margin-bottom: 0;">Забравена парола?</h4>
+                    <p class="text-center">Моля въведете Вашия имейл адрес, ние ще Ви изпратим линк за възстановяване.</p>
                     <hr>
                     <div id="restaurant-sets-holder">
                         <form action="{% url 'forgot_password' %}" class="form-fields-set foodbakery-dev-restaurant-form" method="post" enctype="multipart/form-data">
@@ -39,7 +39,7 @@
                                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                             <div class="field-holder">
                                                 <div class="payment-holder">
-                                                    <input type="submit" value="Continue" id="btn-next-restaurant-information" class="bgcolor">
+                                                    <input type="submit" value="Продължи" id="btn-next-restaurant-information" class="bgcolor">
                                                 </div>
                                             </div>
                                         </div>
