--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -10,8 +10,8 @@
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
                     <div class="user-dashboard loader-holder" style="width: 450px; min-height: auto;">
                         <div class="user-holder">
-                    <h4 class="text-center" style="margin-bottom: 0;">SIGN IN</h4>
-                    <p class="text-center">Order food from your favorite restaurants.</p>
+                    <h4 class="text-center" style="margin-bottom: 0;">ВХОД</h4>
+                    <p class="text-center">Поръчай храна от любимите си ресторанти.</p>
                     <hr>
                     <div id="restaurant-sets-holder">
                         <form action="{% url 'login' %}" class="form-fields-set foodbakery-dev-restaurant-form" method="post" enctype="multipart/form-data">
@@ -44,7 +44,7 @@
                                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                             <div class="field-holder">
                                                 <div class="payment-holder">
-                                                    <input type="submit" value="Submit" id="btn-next-restaurant-information" class="bgcolor">
+                                                    <input type="submit" value="Вход" id="btn-next-restaurant-information" class="bgcolor">
                                                     <a href="{% url 'forgot_password' %}" class="float-right">Forgot password</a>
                                                 </div>
                                             </div>
