--- a/templates/accounts/registerUser.html
+++ b/templates/accounts/registerUser.html
@@ -10,8 +10,8 @@
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
                     <div class="user-dashboard loader-holder">
                         <div class="user-holder">
-                    <h4 class="text-center" style="margin-bottom: 0;">WELCOME TO FOODONLINE</h4>
-                    <p class="text-center">Please fill this form to get yourself onboarded in the foodOnline marketplace.</p>
+                    <h4 class="text-center" style="margin-bottom: 0;">ДОБРЕ ДОШЛИ ВЪВ FOODONLINE</h4>
+                    <p class="text-center">Моля попълнете регистрационната форма, за да може да пазарувате свободно чрез нашия сайт.</p>
                     <hr>
                     <div id="restaurant-sets-holder">
                         <form action="{% url 'registerUser' %}" class="form-fields-set foodbakery-dev-restaurant-form" method="post">
@@ -25,22 +25,22 @@
                                                     <li>
                                                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                                                             <div class="field-holder">
-                                                                <label>First name</label>{{form.first_name}}
+                                                                <label>Име</label>{{form.first_name}}
                                                             </div>
                                                         </div>
                                                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                                                             <div class="field-holder">
-                                                                <label>Last name</label>{{form.last_name}}
+                                                                <label>Фамилия</label>{{form.last_name}}
                                                             </div>
                                                         </div>
                                                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                                                             <div class="field-holder">
-                                                                <label>Email Address</label>{{form.email}}
+                                                                <label>Имейл</label>{{form.email}}
                                                             </div>
                                                         </div>
                                                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                                                             <div class="field-holder">
-                                                                <label>Username</label>{{form.username}}
+                                                                <label>Потребителско име</label>{{form.username}}
                                                             </div>
                                                         </div>
                                                     </li>
@@ -48,13 +48,13 @@
                                                     <li>
                                                         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                                                             <div class="field-holder">
-                                                                <label>Password</label>
+                                                                <label>Парола</label>
                                                                 {{form.password}}
                                                             </div>
                                                         </div>
                                                         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                                                             <div class="field-holder">
-                                                                <label>Confirm Password</label>
+                                                                <label>Потвърди Парола</label>
                                                                 {{form.confirm_password}}
                                                             </div>
                                                         </div>
@@ -81,7 +81,7 @@
                                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                             <div class="field-holder">
                                                 <div class="payment-holder">
-                                                    <input type="submit" value="Submit" id="btn-next-restaurant-information" class="bgcolor">
+                                                    <input type="submit" value="Изпрати" id="btn-next-restaurant-information" class="bgcolor">
                                                 </div>
                                             </div>
                                         </div>
