--- a/templates/accounts/vendorDashboard.html
+++ b/templates/accounts/vendorDashboard.html
@@ -17,13 +17,13 @@
                 <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
                     <div class="user-dashboard loader-holder">
                         <div class="user-holder">
-                            <h5 class="text-uppercase">Overview</h5>
-                            <p class="text-right">Logged in as: <b>{{ user.email }}</b></p>
+                            <h5 class="text-uppercase">Преглед</h5>
+                            <p class="text-right">Влязал като: <b>{{ user.email }}</b></p>
                             <div class="row">
                                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                                     <div class="card">
                                         <div class="card-header">
-                                            Total Orders
+                                            Брой поръчки
                                         </div>
                                         <div class="card-body text-center">
                                             <a href="#"><h5 class="card-title">{{ orders_count }}</h5></a>
@@ -33,7 +33,7 @@
                                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                                     <div class="card">
                                         <div class="card-header">
-                                            Total Revenue
+                                            Общи приходи
                                         </div>
                                         <div class="card-body text-center">
                                             <a href="#"><h5 class="card-title">BGN {{ total_revenue | floatformat:2 }}</h5></a>
@@ -43,7 +43,7 @@
                                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                                     <div class="card">
                                         <div class="card-header">
-                                            This Month
+                                            Този месец
                                         </div>
                                         <div class="card-body text-center">
                                             <a href="#"><h5 class="card-title">BGN {{ current_month_revenue | floatformat:2 }}</h5></a>
@@ -54,20 +54,20 @@
                             <br>
                             <br>
 
-                            <h5 class="text-uppercase">Recent Orders</h5>
+                            <h5 class="text-uppercase">Последно направени поръчки</h5>
                             <div class="row">
                                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                     <div class="user-orders-list">
                                         <div class="responsive-table">
-                                            <table class="table table-hover table-borderless" id="myOrdersTable">
+                                            <table class="table table-hover table-borderless">
                                                 <thead>
                                                   <tr>
-                                                    <th scope="col">Order #</th>
-                                                    <th scope="col">Name</th>
-                                                    <th scope="col">Total</th>
-                                                    <th scope="col">Status</th>
-                                                    <th scope="col">Date</th>
-                                                    <th scope="col">Action</th>
+                                                    <th scope="col">Поръчка #</th>
+                                                    <th scope="col">Име</th>
+                                                    <th scope="col">Тотал</th>
+                                                    <th scope="col">Статус</th>
+                                                    <th scope="col">Дата</th>
+                                                    <th scope="col">Действие</th>
                                                   </tr>
                                                 </thead>
                                                 <tbody>
@@ -75,10 +75,10 @@
                                                         <tr>
                                                             <td>{{ order.order_number }}</td>
                                                             <td>{{ order.name }}</td>
-                                                            <td>BGN {{ order.get_total_by_vendor.grand_total }}</td>
+                                                            <td>BGN {{ order.get_total_by_vendor.grand_total|floatformat:2 }}</td>
                                                             <td>{{ order.status }}</td>
                                                             <td>{{ order.created_at }}</td>
-                                                            <td><a href="{% url 'vendor_order_detail' order.order_number %}" class="btn btn-danger">Details</a></td>
+                                                            <td><a href="{% url 'vendor_order_detail' order.order_number %}" class="btn btn-danger">Детайли</a></td>
                                                         </tr>
                                                     {% endfor %}
                                                 </tbody>
