--- a/templates/customers/cprofile.html
+++ b/templates/customers/cprofile.html
@@ -19,7 +19,7 @@
                     <div class="user-dashboard loader-holder">
                         <div class="user-holder">
                             
-                            <h5 class="text-uppercase">Profile Settings</h5>
+                            <h5 class="text-uppercase">Настройки на профила</h5>
 
                             <form action="{% url 'cprofile' %}" method="POST" enctype="multipart/form-data">
                                 {% csrf_token %}
@@ -45,7 +45,7 @@
                                                             </ul>
                                                         </div>
                                                         <div class="text-holder">
-                                                            <label>Update Profile Picture</label>
+                                                            <label>Обнови профилната си снимка</label>
                                                             <div class="upload-gallery">
                                                                 {{profile_form.profile_picture}}
                                                             </div>
@@ -71,7 +71,7 @@
                                                             </ul>
                                                         </div>
                                                         <div class="text-holder">
-                                                            <label>Update Cover Photo</label>
+                                                            <label>Обнови снимката на корицата си</label>
                                                             <div class="upload-gallery">
                                                                 {{profile_form.cover_photo}}
                                                             </div>
@@ -83,28 +83,28 @@
                                                 
                                                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                                                     <div class="field-holder">
-                                                        <label>First name *</label>
+                                                        <label>Име *</label>
                                                         {{user_form.first_name}}
                                                     </div>
                                                 </div>
 
                                                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                                                     <div class="field-holder">
-                                                        <label>Last name *</label>
+                                                        <label>Фамилия *</label>
                                                         {{user_form.last_name}}
                                                     </div>
                                                 </div>
 
                                                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                                                     <div class="field-holder">
-                                                        <label>Phone Number *</label>
+                                                        <label>Телефонен номер *</label>
                                                         {{user_form.phone_number}}
                                                     </div>
                                                 </div>
 
                                                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                                                     <div class="field-holder">
-                                                        <label>Address *</label>
+                                                        <label>Адрес *</label>
                                                         {{profile_form.address}}
                                                         <small class="text-muted float-right">powered by Google</small>
                                                     </div>
@@ -112,35 +112,35 @@
 
                                                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                                                     <div class="field-holder">
-                                                        <label>Country *</label>
+                                                        <label>Държава *</label>
                                                         {{profile_form.country}}
                                                     </div>
                                                 </div>
 
                                                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                                                     <div class="field-holder">
-                                                        <label>City *</label>
+                                                        <label>Град *</label>
                                                         {{profile_form.city}}
                                                     </div>
                                                 </div>
 
                                                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                                                     <div class="field-holder">
-                                                        <label>Post code *</label>
+                                                        <label>Пощенски код *</label>
                                                         {{profile_form.pin_code}}
                                                     </div>
                                                 </div>
 
                                                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                                                     <div class="field-holder">
-                                                        <label>Latitude *</label>
+                                                        <label>Географска ширина *</label>
                                                         {{profile_form.latitude}}
                                                     </div>
                                                 </div>
 
                                                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                                                     <div class="field-holder">
-                                                        <label>Longitude *</label>
+                                                        <label>Географска дължина *</label>
                                                         {{profile_form.longitude}}
                                                     </div>
                                                 </div>
@@ -151,7 +151,7 @@
                                     <div>
                                         <div class="field-holder">
                                             <div class="payment-holder input-button-loader">
-                                                <input type="submit" value="Update Profile">
+                                                <input type="submit" value="Обнови профила">
                                             </div>
                                         </div>
                                     </div>
