--- a/templates/customers/my_orders.html
+++ b/templates/customers/my_orders.html
@@ -20,7 +20,7 @@
                     <div class="user-dashboard loader-holder">
                         <div class="user-holder">
 
-                            <h5 class="text-uppercase">My Orders</h5>
+                            <h5 class="text-uppercase">Моите Поръчки</h5>
                             <div class="row">
                                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                     <div class="user-orders-list">
@@ -28,12 +28,12 @@
                                             <table class="table table-hover" id="myOrdersTable">
                                                 <thead>
                                                   <tr>
-                                                    <th scope="col">Order #</th>
-                                                    <th scope="col">Name</th>
-                                                    <th scope="col">Total</th>
-                                                    <th scope="col">Status</th>
-                                                    <th scope="col">Date</th>
-                                                    <th scope="col">Action</th>
+                                                    <th scope="col">Поръчка #</th>
+                                                    <th scope="col">Име</th>
+                                                    <th scope="col">Тотал</th>
+                                                    <th scope="col">Статус</th>
+                                                    <th scope="col">Дата</th>
+                                                    <th scope="col">Действие</th>
                                                   </tr>
                                                 </thead>
                                                 <tbody>
@@ -44,7 +44,7 @@
                                                             <td>BGN {{ order.total }}</td>
                                                             <td>{{ order.status }}</td>
                                                             <td>{{ order.created_at }}</td>
-                                                            <td><a href="{% url 'order_detail' order.order_number %}" class="btn btn-danger">Details</a></td>
+                                                            <td><a href="{% url 'order_detail' order.order_number %}" class="btn btn-danger">Детайли</a></td>
                                                         </tr>
                                                     {% endfor %}
                                                 </tbody>
