--- a/templates/includes/c_sidebar.html
+++ b/templates/includes/c_sidebar.html
@@ -1,10 +1,10 @@
 <div class="user-account-nav user-account-sidebar">
     <div class="user-nav-list">
         <ul>
-            <li class="{% if '/custDashboard/' == request.path or '/customer/' == request.path %}active{% endif %}"><a href="{% url 'customer' %}"><i class="icon-dashboard3"></i>Dashboard</a></li>
-            <li class="{% if '/my_orders/' in request.path or '/order_detail/' in request.path %}active{% endif %}"><a href="{% url 'customer_my_orders' %}"><i class="icon-add_shopping_cart"></i>My Orders</a></li>
-            <li class="{% if '/profile/' in request.path %}active{% endif %}"><a href="{% url 'cprofile' %}"><i class="icon-build"></i>Profile Settings</a></li>
-            <li><a class="logout-btn" href="{% url 'logout' %}"><i class="icon-log-out"></i>Signout</a></li>
+            <li class="{% if '/custDashboard/' == request.path or '/customer/' == request.path %}active{% endif %}"><a href="{% url 'customer' %}"><i class="icon-dashboard3"></i>Табло</a></li>
+            <li class="{% if '/my_orders/' in request.path or '/order_detail/' in request.path %}active{% endif %}"><a href="{% url 'customer_my_orders' %}"><i class="icon-add_shopping_cart"></i>Моите поръчки</a></li>
+            <li class="{% if '/profile/' in request.path %}active{% endif %}"><a href="{% url 'cprofile' %}"><i class="icon-build"></i>Настройки на профила</a></li>
+            <li><a class="logout-btn" href="{% url 'logout' %}"><i class="icon-log-out"></i>Излизане</a></li>
         </ul>
     </div>
 </div>
