--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -19,7 +19,7 @@
                             <ul>
                                 <li class="location-has-children choose-location">
                                     <form action="#">
-                                        <input type="text" value="" name="location" id="location" placeholder="Your current location" autocomplete="off">
+                                        <input type="text" value="" name="location" id="location" placeholder="Текуща локация" autocomplete="off">
                                         <span id="foodbakery_radius_location_open" class="foodbakery-radius-location" onclick="getLocation()"><i class="icon-target5"></i></span>
                                     </form>
                                     
@@ -37,14 +37,14 @@
                             {% endif %}
                             <a href="{% url 'marketplace' %}" class="btn btn-outline-danger text-uppercase font-weight-bold">Marketplace</a>
                             {% if user.is_authenticated %}
-                            <a class="cs-color cs-popup-joinus-btn login-popup" href="{% url 'myAccount' %}">My Account</a>
-                            <a class="cs-color cs-popup-joinus-btn login-popup text-danger" href="{% url 'logout' %}">Logout</a>
+                            <a class="cs-color cs-popup-joinus-btn login-popup" href="{% url 'myAccount' %}">Моят акаунт</a>
+                            <a class="cs-color cs-popup-joinus-btn login-popup text-danger" href="{% url 'logout' %}">Излизане</a>
 
                             {% else %}
-                            <a class="cs-color cs-popup-joinus-btn login-popup" href="{% url 'login' %}">Login</a> / 
-                                <span><a href="{% url 'registerUser' %}" class="cs-color cs-popup-joinus-btn login-popup ml-0">Register</a></span><a class="get-start-btn" href="{% url 'registerVendor' %}">
-                                Register
-                                Restaurant </a>
+                            <a class="cs-color cs-popup-joinus-btn login-popup" href="{% url 'login' %}">Вход</a> / 
+                                <span><a href="{% url 'registerUser' %}" class="cs-color cs-popup-joinus-btn login-popup ml-0">Регистрация</a></span><a class="get-start-btn" href="{% url 'registerVendor' %}">
+                                Рег.
+                                Ресторант </a>
                             {% endif %}
                         </div>
                     </div>
