--- a/templates/marketplace/cart.html
+++ b/templates/marketplace/cart.html
@@ -9,7 +9,7 @@
                 <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
                     <div class="tabs-holder horizontal">
                         <ul class="stickynav-tabs nav nav-tabs">
-                            <li class="active"><a data-toggle="tab" href="#home"><i class="fa fa-shopping-cart text-danger"></i>Cart Items</a></li>
+                            <li class="active"><a data-toggle="tab" href="#home"><i class="fa fa-shopping-cart text-danger"></i>Артикули от количката</a></li>
                             
                         </ul>
                         <div class="tab-content">
@@ -17,7 +17,7 @@
                                 <div class="menu-itam-holder">
                                     
                                     <div class="text-center p-5" id="empty-cart" style="display: none;">
-                                        <h3>Cart is empty</h3>
+                                        <h3>Количката е празна</h3>
                                     </div>
 
                                     <div id="menu-item-list-6272" class="menu-itam-list">
@@ -43,7 +43,7 @@
                                             {% endfor %}
                                             {% else %}
                                             <div class="text-center p-5">
-                                                <h3>Cart is empty</h3>
+                                                <h3>Количката е празна</h3>
                                             </div>
                                             {% endif %}
                                         </ul>
@@ -63,7 +63,7 @@
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="tabs-holder horizontal">
                         <ul class="stickynav-tabs nav nav-tabs">
-                            <li class="active"><a data-toggle="tab" href="#home"><i class="icon- icon-room_service"></i>Your Order</a></li>
+                            <li class="active"><a data-toggle="tab" href="#home"><i class="icon- icon-room_service"></i>Твоята поръчка</a></li>
                             
                         </ul>
                         <div class="tab-content">
@@ -73,7 +73,7 @@
                                     <div>
                                         <ul>
                                             <li style="list-style-type: none;">
-                                                Subtotal
+                                                Междинна сума
                                                 <span class="price float-right">
                                                     <span class="currency">BGN</span>
                                                     <span id="subtotal">{{ subtotal }}</span>
@@ -83,7 +83,7 @@
                                                 {% for i, j in value.items %}
                                                     {% if key == "Delivery" %}
                                                         <li style="list-style-type: none;">
-                                                            {{key}}
+                                                            Доставка
                                                             <span class="price float-right">
                                                                 <span class="currency">BGN</span>
                                                                 <span id="tax-{{ key }}">{{ j }}</span>
@@ -101,14 +101,14 @@
                                                 {% endfor %}
                                             {% endfor %}
                                             <li style="list-style-type: none; font-weight: 600;">
-                                                TOTAL
+                                                Крайна сума
                                                 <span class="price float-right">
                                                     <span class="currency">BGN</span>
                                                     <span id="total">{{ grand_total }}</span>
                                                 </span>
                                             </li>
 
-                                            <a href="{% url 'checkout' %}" class="btn btn-danger w-100 p-2 mt-3">PROCEED TO CHECKOUT</a>
+                                            <a href="{% url 'checkout' %}" class="btn btn-danger w-100 p-2 mt-3">ПРОДЪЛЖИ КЪМ ПЛАЩАНЕ</a>
                                         </ul>
                                     </div>
 
