--- a/templates/marketplace/listings.html
+++ b/templates/marketplace/listings.html
@@ -17,7 +17,7 @@
                             <div class="listing-sorting-holder">
                                 <div class="row">
                                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                        <h4>{{ vendor_count }} Restaurant's found</h4>
+                                        <h4>{{ vendor_count }} Ресторант/и намерен/и</h4>
                                     </div>
                                 </div>
                             </div>
@@ -55,12 +55,12 @@
 
                                             {% if source_location %}
                                             <br>
-                                            <span><small><b>{{ vendor.kms }}km</b> away from {{source_location}}</small></span>
+                                            <span><small><b>{{ vendor.kms }}km</b> далеч от {{source_location}}</small></span>
                                             {% endif %}
                                         </div>
                                         <div class="list-option">
 
-                                            <a href="{% url 'vendor_detail' vendor.vendor_slug %}" class="viewmenu-btn text-color">View Menu</a>
+                                            <a href="{% url 'vendor_detail' vendor.vendor_slug %}" class="viewmenu-btn text-color">Виж Меню</a>
                                         </div>
                                     </li>
                                     {% endfor %}
@@ -70,10 +70,8 @@
                         </div>
                         <div class="section-sidebar col-lg-3 col-md-3 col-sm-12 col-xs-12">
                             <div class="message-box" style="background-color: #fa9918;">
-                                <strong>I'm not Listed!</strong><span>is your restaurant or
-                                    business not
-                                    listed on over site</span>
-                                <a href="{% url 'registerVendor' %}" class="request-btn">Add Your business!</a>
+                                <strong>Не откривам своя ресторант!</strong><span>Ако вашият ресторант не е регистриран в нашата платформа</span>
+                                <a href="{% url 'registerVendor' %}" class="request-btn">Добавете своя бизнес!</a>
                             </div>
                         </div>
                     </div>
