--- a/templates/orders/order_complete.html
+++ b/templates/orders/order_complete.html
@@ -10,7 +10,7 @@
                 <img src="{% static 'logo/main-logo.png' %}" alt="foodOnline Logo" width="300">
                 <div class="row">
                     <div class="col-md-6">
-                        <h4 class="mt-2 mb-3">Thank you for your order!</h4>
+                        <h4 class="mt-2 mb-3">Благодарим за твоята поръчка!</h4>
                     </div>
                     <div class="col-md-6 text-right">
                         <p class="mb-0">{{ order.name }}</p>
@@ -19,17 +19,17 @@
                         <p class="mb-0">{{ order.email }}</p>
                     </div>
                 </div>
-                <h6>Hello {{ order.name }}, </h6><span>Review your order details below.</span>
+                <h6>Здравей, {{ order.name }}, </h6><span>Виж детайлите на своята поръчка по-долу.</span>
                 <hr>
                 <div class="d-flex justify-content-between">
                     <div>
-                        <span class="d-block">Order Date: </span><span class="font-weight-bold">{{ order.created_at|timezone:"Europe/Sofia" }}</span>
+                        <span class="d-block">Дата на поръчка: </span><span class="font-weight-bold">{{ order.created_at|timezone:"Europe/Sofia" }}</span>
                     </div>
                     <div>
-                        <span class="d-block">Order No: </span><span class="font-weight-bold">{{ order.order_number }}</span>
+                        <span class="d-block">Номер на поръчка: </span><span class="font-weight-bold">{{ order.order_number }}</span>
                     </div>
                     <div>
-                        <span class="d-block">Transaction ID: </span><span class="font-weight-bold">{{ order.payment.transaction_id }}</span>
+                        <span class="d-block">ID на транзакцията: </span><span class="font-weight-bold">{{ order.payment.transaction_id }}</span>
                     </div>
                 </div>
                 <hr>
@@ -56,7 +56,7 @@
                     <div class="col-md-6">
                         <ul>
                             <li style="list-style-type: none;">
-                                Subtotal
+                                Междинна сума
                                 <span class="price float-right">
                                     <span class="currency">BGN</span>
                                     <span id="subtotal">{{ subtotal|floatformat:2 }}</span>
@@ -66,7 +66,7 @@
                                 {% for i, j in value.items %}
                                     {% if key == "Delivery" %}
                                         <li style="list-style-type: none;">
-                                            {{key}}
+                                            Доставка
                                             <span class="price float-right">
                                                 <span class="currency">BGN</span>
                                                 <span id="tax-{{ key }}">{{ j }}</span>
@@ -84,7 +84,7 @@
                                 {% endfor %}
                             {% endfor %}
                             <li style="list-style-type: none; font-weight: 600;">
-                                TOTAL
+                                Крайна сума
                                 <span class="price float-right">
                                     <span class="currency">BGN</span>
                                     <span id="total">{{ order.total }}</span>
@@ -96,7 +96,7 @@
                 <hr>
                 <div class="d-flex justify-content-between">
                     <div>
-                        <span class="d-block font-weight-bold">Thanks for ordering with us.</span>
+                        <span class="d-block font-weight-bold">Благодарим ти, че поръчваш с нас!.</span>
                         <span>FoodOnline Team</span>
                     </div>
                     <div class="d-flex justify-content-end align-items-end">
