--- a/templates/orders/order_confirmation_email.html
+++ b/templates/orders/order_confirmation_email.html
@@ -31,23 +31,23 @@
   <table bgcolor="#EAF0F6" width="100%" role="presentation" border="0" cellpadding="0" cellspacing="10px" style="padding: 30px 30px 60px 60px;">
     <tr>
         <td>
-            <h2 style="text-align: center; color: blueviolet;">Thank you for your order</h2>
-            <p>Review your order information below.</p>
+            <h2 style="text-align: center; color: blueviolet;">Благодарим за Вашата поръчка</h2>
+            <p>Прегледайте информацията за своята поръчка по-долу.</p>
         </td>
     </tr>
     <tr>
         <td>
-            Order date: {{ order.created_at }}
+            Дата на поръчка: {{ order.created_at }}
         </td>
     </tr>
     <tr>
         <td>
-            Order number: {{ order.order_number }}
+            Номер на поръчка: {{ order.order_number }}
         </td>
     </tr>
     <tr>
         <td>
-            Transaction ID: {{ order.payment.transaction_id }}
+            ID на транзакцията: {{ order.payment.transaction_id }}
         </td>
     </tr>
   </table>
@@ -56,14 +56,12 @@
   <table bgcolor="#EAF0F6" width="100%" role="presentation" border="0" cellpadding="0" cellspacing="10px" style="padding: 30px 30px 60px 60px;">
     <tbody>
         <tr>
-            <th>Image</th>
-            <th>Food Item</th>
+            <th>Хранителен продукт</th>
             <th>Qty</th>
-            <th>Price</th>
+            <th>Цена</th>
         </tr>
         {% for food in ordered_food %}
         <tr>
-            <td><img src="http://{{domain}}{{ food.fooditem.image.url }}" alt="Food Image" width="60"></td>
             <td><p style="margin: 0;">{{ food.fooditem }}</p>
             <small><a href="http://{{ domain }}{% url 'vendor_detail' food.fooditem.vendor.vendor_slug %}" style="color: #ccc;">{{ food.fooditem.vendor.vendor_name }}</a></small>
             </td>
@@ -77,12 +75,12 @@
   <!-- Order amounts -->
   <table bgcolor="#EAF0F6" width="100%" role="presentation" border="0" cellpadding="0" cellspacing="10px" style="padding: 30px 30px 60px 60px;">
     <tbody>
-        <tr>Subtotal: BGN {{ customer_subtotal }}</tr>
+        <tr>Междинна сума: BGN {{ customer_subtotal }}</tr>
         {% for key, val in tax_data.items %}
             {% for i, j in val.items %}
                 {% if key == "Delivery" %}
                 <tr>
-                    <td>{{ key }} : <span>BGN </span><span>{{ j }}</span></td>
+                    <td>Доставка : <span>BGN </span><span>{{ j }}</span></td>
                 </tr>
                 {% else %}
                 <tr>
@@ -92,7 +90,7 @@
             {% endfor %}
         {% endfor %}
 
-        <tr>Grand Total: BGN {{ order.total }}</tr>
+        <tr>Крайна Сума: BGN {{ order.total }}</tr>
     </tbody>
   </table>
 
