added option for the vendor to change the status of the order from his dashboard

--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -55,15 +55,16 @@
     <!-- Header End -->
 
     <script>
-        var x = document.getElementById("location");
-        var watchID;
-        var current_location = sessionStorage.getItem("current_location")
+        var x = document.getElementById("location"); // x: Gets an element with ID "location" from an HTML document.
+        var watchID; // A variable to store the ID of the position monitor.
+        var current_location = sessionStorage.getItem("current_location") // Gets the current location from sessionStorage.
         
         if(current_location != ""){
             x.value = current_location;
         }
     
         function getLocation() {
+            // If the browser supports geolocation, position monitoring is started via watchPosition.
             if (navigator.geolocation) {
                 watchID = navigator.geolocation.watchPosition(showPosition);
             } else { 
@@ -72,6 +73,7 @@
         }
     
         function showPosition(position) {
+            // Gets the latitude and longitude of the position.
             var lat = position.coords.latitude
             var lng = position.coords.longitude
     
@@ -84,6 +86,7 @@
                 success: function(response){
                     var current_location = response.results[0].formatted_address
                     x.value = current_location
+                    // Returns the human-readable address and assigns it to the x field, stores it in sessionStorage and redirects to a URL with latitude and longitude parameters.
                     sessionStorage.setItem("current_location", current_location)
                     window.location = '?lat='+lat+'&lng='+lng
                 }
