--- a/templates/marketplace/cart.html
+++ b/templates/marketplace/cart.html
@@ -29,7 +29,7 @@
                                                 <div class="image-holder"><img src="{{ item.fooditem.image.url }}" alt=""></div>
                                                 <div class="text-holder">
                                                     <h6>{{ item.fooditem }}</h6>
-                                                    <span>{{ item.fooditem.description }}</span>
+                                                    <span style="font-size: 9px; word-wrap: break-word; max-width: 200px;">{{ item.fooditem.description }}</span>
                                                     <a href="{% url 'vendor_detail' item.fooditem.vendor.vendor_slug %}" class="badge badge-warning">{{ item.fooditem.vendor }}</a>
                                                 </div>
                                                 <div class="price-holder">
